--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                   <div class="card rounded-4 shadow border-0 overflow-hidden">
                      <div class="position-relative">
                         <div class="product-back"><img
-                           src="img/1.jpg"
+                           src="img/restuarant.jpg"
                            alt="" class="img-fluid rounded-top"></div>
                         <!-- product time  -->
                         <div class="product-time shadow-sm position-absolute bottom-0 end-0 m-3">
@@ -253,13 +253,13 @@
                      </div>
                      <div class="card-body">
                         <div class="d-flex justify-content-between">
-                           <div class="h4 fw-bold">La Pino'z Pizza</div>
+                           <div class="h4 fw-bold">Daily specials</div>
                            <div><span class="badge bg-success">4.2&nbsp;<i class="fa-solid fa-star"></i></span>
                            </div>
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
-                           <div>Pizza, Fast Food, Beverages</div>
-                           <div>$200 for one</div>
+                           <div>Fast Food, Beverages</div>
+                           <div>GH40 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
