--- a/index.html
+++ b/index.html
@@ -334,29 +334,8 @@
                   <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 border-bottom py-3">
                      <span><i class="bi bi-search h6"></i></span>
                      <div class="lh-sm">
-                        <h6 class="mb-1">Bangalore</h6>
-                        <p class="text-muted m-0">Karnataka, ghana</p>
-                     </div>
-                  </div>
-                  <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 border-bottom py-3">
-                     <span><i class="bi bi-search h6"></i></span>
-                     <div class="lh-sm">
-                        <h6 class="mb-1">Bangalore internaltional airport</h6>
-                        <p class="text-muted m-0">Karmpegowda.in't Airport, Hunachur, karnataka, ghana</p>
-                     </div>
-                  </div>
-                  <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 border-bottom py-3">
-                     <span><i class="bi bi-search h6"></i></span>
-                     <div class="lh-sm">
-                        <h6 class="mb-1">Railway Station back gate</h6>
-                        <p class="text-muted m-0">M.G. Railway Colony, Majestic, Bangaluru</p>
-                     </div>
-                  </div>
-                  <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 pt-3">
-                     <span><i class="bi bi-search h6"></i></span>
-                     <div class="lh-sm">
-                        <h6 class="mb-1">Bangalore Cant</h6>
-                        <p class="text-muted m-0">Cantonent Railway Station Road, Contonment Railway</p>
+                        <h6 class="mb-1">Kumasi</h6>
+                        <p class="text-muted m-0">santasi, ghana</p>
                      </div>
                   </div>
                </div>
