--- a/offers.html
+++ b/offers.html
@@ -205,7 +205,7 @@
                      <div class="card border-0">
                         <img src="./Foods/Fridays/frenchfries.png" class="img-fluid m-auto ch-70" alt="#">
                         <div class="card-body text-center px-0 pb-0">
-                           <h6 class="card-title text-muted">French Fries</h6>
+                           <h6 class="card-title text-muted">French</h6>
                         </div>
                      </div>
                   </a>
