--- a/add-card.html
+++ b/add-card.html
@@ -99,7 +99,7 @@
                  
                </ul>
             </li>
-            <li><a href="coupons.html"><i class="bi bi-ticket-detailed me-2"></i> Coupons</a></li>
+                        <li><a href="coupons.html"><i class="bi bi-ticket-detailed me-2"></i> Coupons</a></li>
             <li><a href="offers.html"><i class="bi bi-percent me-2"></i> Offers</a></li>
             <li><a href="wallet.html"><i class="bi bi-wallet me-2"></i> Wallet</a></li>
                         <li><a href="notifications.html"><i class="bi bi-bell me-2"></i> Notifications</a></li>
@@ -117,6 +117,8 @@
             <li><a href="order-confirm.html"><i class="bi bi-bag-check me-2"></i> Order Confirm</a></li>
             <li><a href="order-details.html"><i class="bi bi-list-nested me-2"></i> Order Details</a></li>
             <li><a href="support.html"><i class="bi bi-question-circle me-2"></i> Support</a></li>
+            <li><a href="#"><i class="bi bi-view-list me-2"></i> Become a Rider</a></li>
+            <li><a href="#"><i class="bi bi-view-list me-2"></i>Add Resturant</a></li>
          </ul>
          <ul class="bottom-nav">
             <li class="email">
