--- a/personal-info.html
+++ b/personal-info.html
@@ -41,22 +41,18 @@
          <form>
             <div class="mb-3">
                <label class="form-label text-muted">Name</label>
-               <input type="text" class="shadow-none form-control"
-                  value="Askbootstrap">
+               <input type="text" class="shadow-none form-control">
             </div>
             <div>
                <label class="form-label text-muted">Mobile Number</label>
                <div class="input-group mb-3">
                   <span class="input-group-text p-0">
                      <select class="form-select border-0" aria-label="Default select example">
-                        <option selected>+91</option>
-                        <option value="1">+01</option>
-                        <option value="2">+65</option>
-                        <option value="3">+92</option>
+                        <option selected>+233</option>
                      </select>
                   </span>
                   <input type="number" class="shadow-none form-control" placeholder="Enter Your Number"
-                     value="1234567890" required>
+                   required>
                </div>
             </div>
             <div class="d-grid">
